// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API course exercise request contract > ZPublicApiCourseExerciseNotifyStatusQuery keeps its published shape > ZPublicApiCourseExerciseNotifyStatusQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "pollCount": {
      "default": 0,
      "maximum": 1000,
      "minimum": 0,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiCourseExercisesQuery keeps its published shape > ZPublicApiCourseExercisesQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "lessonId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "limit": {
      "default": 20,
      "maximum": 100,
      "minimum": 1,
      "type": "integer",
    },
    "page": {
      "default": 1,
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "sectionId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiCourseMarksQuery keeps its published shape > ZPublicApiCourseMarksQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "limit": {
      "default": 20,
      "maximum": 100,
      "minimum": 1,
      "type": "integer",
    },
    "page": {
      "default": 1,
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiCourseSubmissionsQuery keeps its published shape > ZPublicApiCourseSubmissionsQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "exerciseId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "gradingState": {
      "enum": [
        "queued",
        "processing",
        "awaiting_manual",
        "completed",
        "failed",
      ],
      "type": "string",
    },
    "limit": {
      "default": 20,
      "maximum": 100,
      "minimum": 1,
      "type": "integer",
    },
    "memberId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "page": {
      "default": 1,
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiCreateCourseExercise keeps its published shape > ZPublicApiCreateCourseExercise 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "description": {
      "type": "string",
    },
    "dueBy": {
      "format": "date-time",
      "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z|([+-](?:[01]\\d|2[0-3]):[0-5]\\d)))$",
      "type": "string",
    },
    "lessonId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "order": {
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "questions": {
      "items": {
        "properties": {
          "options": {
            "items": {
              "properties": {
                "isCorrect": {
                  "type": "boolean",
                },
                "label": {
                  "minLength": 1,
                  "type": "string",
                },
                "settings": {
                  "additionalProperties": {},
                  "propertyNames": {
                    "type": "string",
                  },
                  "type": "object",
                },
              },
              "required": [
                "label",
                "isCorrect",
              ],
              "type": "object",
            },
            "maxItems": 50,
            "type": "array",
          },
          "order": {
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
          "points": {
            "maximum": 9007199254740991,
            "minimum": 1,
            "type": "integer",
          },
          "question": {
            "minLength": 1,
            "type": "string",
          },
          "questionTypeId": {
            "anyOf": [
              {
                "const": 1,
                "type": "number",
              },
              {
                "const": 2,
                "type": "number",
              },
              {
                "const": 3,
                "type": "number",
              },
              {
                "const": 4,
                "type": "number",
              },
              {
                "const": 5,
                "type": "number",
              },
              {
                "const": 6,
                "type": "number",
              },
              {
                "const": 7,
                "type": "number",
              },
              {
                "const": 8,
                "type": "number",
              },
              {
                "const": 9,
                "type": "number",
              },
              {
                "const": 10,
                "type": "number",
              },
              {
                "const": 11,
                "type": "number",
              },
              {
                "const": 12,
                "type": "number",
              },
              {
                "const": 13,
                "type": "number",
              },
              {
                "const": 14,
                "type": "number",
              },
            ],
            "default": 1,
          },
          "settings": {
            "additionalProperties": {},
            "propertyNames": {
              "type": "string",
            },
            "type": "object",
          },
        },
        "required": [
          "question",
          "points",
        ],
        "type": "object",
      },
      "maxItems": 200,
      "type": "array",
    },
    "sectionId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "slug": {
      "maxLength": 80,
      "minLength": 1,
      "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
      "type": "string",
    },
    "templateId": {
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "title": {
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "order",
  ],
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiExerciseTemplatesQuery keeps its published shape > ZPublicApiExerciseTemplatesQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "limit": {
      "default": 20,
      "maximum": 100,
      "minimum": 1,
      "type": "integer",
    },
    "page": {
      "default": 1,
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "tag": {
      "maxLength": 50,
      "minLength": 1,
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiGradeCourseSubmission keeps its published shape > ZPublicApiGradeCourseSubmission 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "answers": {
      "items": {
        "properties": {
          "points": {
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
          "questionId": {
            "exclusiveMinimum": 0,
            "maximum": 9007199254740991,
            "type": "integer",
          },
        },
        "required": [
          "questionId",
          "points",
        ],
        "type": "object",
      },
      "maxItems": 500,
      "type": "array",
    },
    "feedback": {
      "type": "string",
    },
    "total": {
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "answers",
    "total",
  ],
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiUpdateCourseExercise keeps its published shape > ZPublicApiUpdateCourseExercise 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "allowMultipleAttempts": {
      "type": "boolean",
    },
    "completionPolicy": {
      "enum": [
        "submitted",
        "passed",
      ],
      "type": "string",
    },
    "description": {
      "type": "string",
    },
    "dueBy": {
      "format": "date-time",
      "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z|([+-](?:[01]\\d|2[0-3]):[0-5]\\d)))$",
      "type": "string",
    },
    "isUnlocked": {
      "type": "boolean",
    },
    "lessonId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "order": {
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "passThreshold": {
      "maximum": 100,
      "minimum": 0,
      "type": "integer",
    },
    "questions": {
      "items": {
        "properties": {
          "delete": {
            "type": "boolean",
          },
          "exerciseSectionId": {
            "anyOf": [
              {
                "format": "uuid",
                "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
                "type": "string",
              },
              {
                "type": "null",
              },
            ],
          },
          "id": {
            "exclusiveMinimum": 0,
            "maximum": 9007199254740991,
            "type": "integer",
          },
          "options": {
            "items": {
              "properties": {
                "delete": {
                  "type": "boolean",
                },
                "id": {
                  "exclusiveMinimum": 0,
                  "maximum": 9007199254740991,
                  "type": "integer",
                },
                "isCorrect": {
                  "type": "boolean",
                },
                "label": {
                  "minLength": 1,
                  "type": "string",
                },
                "settings": {
                  "additionalProperties": {},
                  "propertyNames": {
                    "type": "string",
                  },
                  "type": "object",
                },
              },
              "required": [
                "label",
                "isCorrect",
              ],
              "type": "object",
            },
            "maxItems": 50,
            "type": "array",
          },
          "order": {
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
          "points": {
            "maximum": 9007199254740991,
            "minimum": 1,
            "type": "integer",
          },
          "question": {
            "minLength": 1,
            "type": "string",
          },
          "questionTypeId": {
            "anyOf": [
              {
                "const": 1,
                "type": "number",
              },
              {
                "const": 2,
                "type": "number",
              },
              {
                "const": 3,
                "type": "number",
              },
              {
                "const": 4,
                "type": "number",
              },
              {
                "const": 5,
                "type": "number",
              },
              {
                "const": 6,
                "type": "number",
              },
              {
                "const": 7,
                "type": "number",
              },
              {
                "const": 8,
                "type": "number",
              },
              {
                "const": 9,
                "type": "number",
              },
              {
                "const": 10,
                "type": "number",
              },
              {
                "const": 11,
                "type": "number",
              },
              {
                "const": 12,
                "type": "number",
              },
              {
                "const": 13,
                "type": "number",
              },
              {
                "const": 14,
                "type": "number",
              },
            ],
          },
          "settings": {
            "additionalProperties": {},
            "propertyNames": {
              "type": "string",
            },
            "type": "object",
          },
        },
        "required": [
          "question",
          "points",
        ],
        "type": "object",
      },
      "maxItems": 200,
      "type": "array",
    },
    "sectionDisplayMode": {
      "enum": [
        "one_question",
        "all_questions",
      ],
      "type": "string",
    },
    "sectionId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "sections": {
      "items": {
        "properties": {
          "afterBehavior": {
            "default": {
              "action": "continue",
            },
            "oneOf": [
              {
                "properties": {
                  "action": {
                    "const": "continue",
                    "type": "string",
                  },
                },
                "required": [
                  "action",
                ],
                "type": "object",
              },
              {
                "properties": {
                  "action": {
                    "const": "go_to_section",
                    "type": "string",
                  },
                  "exerciseSectionId": {
                    "format": "uuid",
                    "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
                    "type": "string",
                  },
                },
                "required": [
                  "action",
                  "exerciseSectionId",
                ],
                "type": "object",
              },
              {
                "properties": {
                  "action": {
                    "const": "submit",
                    "type": "string",
                  },
                },
                "required": [
                  "action",
                ],
                "type": "object",
              },
            ],
          },
          "colorTheme": {
            "default": "blue",
            "enum": [
              "blue",
              "green",
              "amber",
              "rose",
              "violet",
              "slate",
            ],
            "type": "string",
          },
          "description": {
            "anyOf": [
              {
                "type": "string",
              },
              {
                "type": "null",
              },
            ],
          },
          "id": {
            "format": "uuid",
            "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
            "type": "string",
          },
          "order": {
            "maximum": 9007199254740991,
            "minimum": 0,
            "type": "integer",
          },
          "title": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "title",
          "order",
        ],
        "type": "object",
      },
      "maxItems": 50,
      "type": "array",
    },
    "slug": {
      "maxLength": 80,
      "minLength": 1,
      "pattern": "^[a-z0-9]+(?:-[a-z0-9]+)*$",
      "type": "string",
    },
    "title": {
      "minLength": 1,
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`public API course exercise request contract > ZPublicApiUpdateCourseSubmission keeps its published shape > ZPublicApiUpdateCourseSubmission 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "feedback": {
      "type": "string",
    },
    "gradingState": {
      "enum": [
        "queued",
        "processing",
        "awaiting_manual",
        "completed",
        "failed",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;
